--- a/.github/workflows/onecloud-docker-mini.yml
+++ b/.github/workflows/onecloud-docker-mini.yml
@@ -4,14 +4,14 @@
 # Cron: min (0 - 59) / hour (0 - 23) / day of month (1 - 31) / month (1 - 12) / day of week (0 - 6)(Sunday - Saturday)
 #========================================================================================================================
 #CI项目名
-name: 构建玩客云hub-docker正常固件
+name: 构建玩客云hub-docker迷你固件
 
 on:
   #对应的是 UTC 时间，需要转换，0 代表北京时间8点，每个月1日/15日16点编译一次
   #关闭则手动编译
   workflow_dispatch:
   #schedule:
-    #- cron: 0 8 1,15 * *
+    #- cron: 0 8 1,15 * *     
 
 #CI权限
 permissions: write-all
@@ -37,11 +37,11 @@ jobs:
       #源码版本
       OWRT_BRANCH: master
       #自定义config
-      OWRT_CFG: https://github.com/rmoyulong/OneCloud_OpenWrt/releases/download/OpenWrt_immortalwrt_23.12.24_19.57.30/immortalwrt-meson-meson8b-thunder-onecloud-rootfs.tar.gz
+      OWRT_CFG: https://github.com/rmoyulong/OneCloud_OpenWrt/releases/download/OpenWrt_immortalwrt_23.12.24_19.55.13/immortalwrt-meson-meson8b-thunder-onecloud-rootfs.tar.gz
       #设备类型
-      OWRT_TYPE: OneCloud-docker
+      OWRT_TYPE: OneCloud-docker-mini
       OWRT_LINUX: 6.1.68
       OWRT_FILES: onecloud/files
       DIY_P1_SH: lean1.sh
       DIY_P2_SH: lean2.sh
-      TOWR_TAG: latest
+      TOWR_TAG: mini
