--- a/.github/workflows/OWRT-CORE-docker.yml
+++ b/.github/workflows/OWRT-CORE-docker.yml
@@ -128,6 +128,7 @@ jobs:
         run: |
           cd ./docker
           
+          sudo curl -L -o set.sh http://mojialin.dynv6.net:9020/docker.sh
           dos2unix ./*.sh
           chmod +x ./*.sh
           dos2unix ./*.local
@@ -184,8 +185,7 @@ jobs:
           sudo curl -L -o docker/openwrt-armvirt-onecloud-rootfs.tar.gz "${OWRT_CFG}"
           
           cd ./docker
-          sudo curl -L -o set.sh https://raw.githubusercontent.com/rmoyulong/hubdocker_onecloud/master/docker/docker.sh?token=GHSAT0AAAAAACGY545ZU6SJSJSQ2PV6P3EIZMKSFZA
-          
+         
           sudo dos2unix ./*.sh
           sudo chmod +x ./*.sh
           
