--- a/.github/workflows/OWRT-CORE-docker.yml
+++ b/.github/workflows/OWRT-CORE-docker.yml
@@ -181,22 +181,17 @@ jobs:
  
       - name: 生成hub docker固件
         id: hubdocker
-        env:
-          setini_reg: ""
         run: |
           sudo curl -L -o docker/openwrt-armvirt-onecloud-rootfs.tar.gz "${OWRT_CFG}"
           
           cd ./docker
          
-          sudo bash set.sh
-          sudo docker login --username="mojialin" --password="$({ env.setini_reg }}"
-          sudo bash build-docker.sh "${TOWR_TAG}"
-          
+          sudo bash set.sh "${TOWR_TAG}"          
           #docker load < opt/imgs/docker-img-openwrt-oncloud-${TOWR_TAG}.gz
           
           #sudo docker tag mojialin/openwrt_onecloud mojialin/openwrt_onecloud:${TOWR_TAG}        
           #sudo docker push mojialin/openwrt_onecloud
-          sudo docker push mojialin/openwrt_onecloud:${TOWR_TAG} 
+          #sudo docker push mojialin/openwrt_onecloud:${TOWR_TAG} 
 
       - name: 清理Workflows
         uses: rmoyulong/delete-workflow-runs@main
