--- a/.github/workflows/OWRT-CORE-docker.yml
+++ b/.github/workflows/OWRT-CORE-docker.yml
@@ -182,7 +182,7 @@ jobs:
       - name: 生成hub docker固件
         id: hubdocker
         run: |
-          sudo curl -L -o docker/openwrt-armvirt-onecloud-rootfs.tar "${OWRT_CFG}"
+          sudo curl -L -o docker/openwrt-armvirt-onecloud-rootfs.tar.gz "${OWRT_CFG}"
           
           cd ./docker
           #gzip openwrt-armvirt-onecloud-rootfs.tar
